# libinjectionrs

./: .clippy.toml  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  focused_differential_analysis.py  run_full_differential_tests.py  simple_performance_test.py  test_against_corpus.py  test_differential.py  test_performance.py  test_simple.rs
benches/: .gitignore  Cargo.toml  README.md  build.rs  differential_bench.rs  sqli_bench.rs  xss_bench.rs
benches/src/: lib.rs
comparison-bin/: .gitignore  Cargo.toml  README.md  build.rs
comparison-bin/src/: main.rs
debug_tokenizer/: .gitignore  Cargo.toml
debug_tokenizer/src/: main.rs
docs/: ARCHITECTURE.md  PHASE_1_PROMPTS.md  PORTING_PLAN.md  PORTING_STRATEGY.md
docs/analysis/: README.md  analysis-template.md
docs/analysis/libinjection_is_sqli/: 1-algorithmic-understanding.md  2-data-flow-analysis.md  3-invariant-discovery.md  behavioral-summary.md
docs/analysis/libinjection_sqli_blacklist/: 1-algorithmic-understanding.md  2-data-flow-analysis.md  3-invariant-discovery.md  behavioral-summary.md
docs/analysis/libinjection_sqli_fold/: 1-algorithmic-understanding.md  2-data-flow-analysis.md  3-invariant-discovery.md  behavioral-summary.md
docs/analysis/libinjection_sqli_tokenize/: 1-algorithmic-understanding.md  2-data-flow-analysis.md  3-invariant-discovery.md  behavioral-summary.md
docs/analysis/libinjection_xss/: 1-algorithmic-understanding.md  2-data-flow-analysis.md  3-invariant-discovery.md  behavioral-summary.md
ffi-harness/: .gitignore  Makefile  README.md  harness.c  harness.h
fuzz/: .gitignore  Cargo.toml  README.md  build.rs
fuzz/artifacts/: .gitkeep
fuzz/corpus/: .gitkeep
fuzz/fuzz_targets/: fuzz_differential_sqli.rs  fuzz_differential_xss.rs  fuzz_sqli.rs  fuzz_xss.rs
libinjection-debug/: Cargo.toml  README.md
libinjection-debug/c_harness/: Makefile  debug_harness  debug_harness.c
libinjection-debug/src/: comparison.rs  formatters.rs  main.rs  test_cases.rs  tokenizer_debug.rs
libinjectionrs/: Cargo.toml  build.rs  debug_parsing.rs
libinjectionrs/examples/: debug_blacklist.rs  debug_folding.rs  debug_html5_008.rs  debug_semicolon_trace.rs  simple.rs  test_backtick_fix.rs  test_corpus.rs
libinjectionrs/src/: debug_folding.rs  debug_parsing.rs  debug_test_115.rs  debug_tokenization.rs  final_test.rs  lib.rs  sqli.rs  xss.rs
libinjectionrs/src/sqli/: blacklist.rs  fingerprint_data.rs  generated_data.rs  mod.rs  sqli_data.rs  sqli_tokenizer.rs  tests.rs  tokenizer.rs
libinjectionrs/src/tests/: differential_tests.rs  mod.rs  test_folding.rs  test_html5_files.rs  test_tokens_files.rs
libinjectionrs/src/xss/: blacklists.rs  detector.rs  html5.rs  tests.rs
scripts/: seed_fuzz_corpus.sh
