[workspace]
resolver = "2"
members = ["libinjectionrs", "comparison-bin", "benches"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/libinjectionrs"

[workspace.dependencies]
bitflags = "2.6"
smallvec = "1.13" 
thiserror = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }