[workspace]
resolver = "2"
members = ["libinjectionrs", "comparison-bin", "benches"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/yourusername/libinjectionrs"

[workspace.dependencies]
bitflags = "2.6"
smallvec = "1.13" 
thiserror = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
# Deny unsafe code
unsafe_code = "deny"

[workspace.lints.clippy]
# Deny panicking functions
expect_used = "deny"
unwrap_used = "deny"
panic = "deny"
unimplemented = "deny" 
unreachable = "deny"
todo = "deny"

# Additional safety lints
arithmetic_side_effects = "warn"
float_arithmetic = "warn"

# Disallow specific methods/macros
disallowed_methods = "deny"