[package]
name = "libinjectionrs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of libinjection - SQL/XSS injection detection library"
keywords = ["security", "sql-injection", "xss", "detection", "web-security"]
categories = ["web-programming", "parser-implementations"]

[dependencies]
bitflags = { workspace = true }
smallvec = { workspace = true, optional = true }

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
urlencoding = "2.0"

[features]
default = ["std", "smallvec"]
std = []
smallvec = ["dep:smallvec"]

[lib]
name = "libinjectionrs"
path = "src/lib.rs"

[lints]
workspace = true